--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,7 +20,7 @@
     --accent-foreground: 0 0% 98%;
     --destructive: 352, 91%, 62%;
     --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 14.9%;
+    --border: 214, 15%, 19%;
     --input: 0 0% 14.9%;
     --ring: 0 0% 83.1%;
     --chart-1: 220 70% 50%;
